--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,7 +3,7 @@
 
 .cocktail-title {
   margin-top: 0px;
-  background-color: black;
+  background-color: #3A414B;
   color: white;
   padding: 100px 0px;
   h3 {
