end of uploader

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -16,7 +16,7 @@
       <% @cocktails.each do |cocktail| %>
         <%= link_to cocktail_path(cocktail) do %>
           <div class="col-xs-12 col-md-6 col-lg-4">
-            <div class="card" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://source.unsplash.com/random/800x200');">
+            <div class="card" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path @cocktail.photo, height: 300, width: 400, crop: :fill %>');">
               <div class="card-description">
                 <%= cocktail.name %>
               </div>
