--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,6 +3,7 @@
 <h1><%= @cocktail.name %></h1>
 
 <h2>Doses</h2>
+      <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
 <ul>
   <% @cocktail.doses.each do |dose| %>
     <li>
