--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,8 +3,9 @@
 
 
 <%= simple_form_for(@cocktail) do |f| %>
-
   <%= f.input :name %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden  %>
   <%= f.button :submit, class: "btn btn-info" %>
 <% end %>
 
