--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,12 +1,13 @@
 .card {
-  height: 400px;
+  height: 300px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-position: center;
   background-size: cover !important;
   color: white;
-  border-radius: 5px;
+  border-radius: 2px;
+  margin-top: 50px;
   margin-bottom: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 4);
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 4);
   position: relative;
   &:hover {
     opacity: 0.8;
