--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,14 +3,21 @@
 
 .cocktail-title {
   margin-top: 0px;
-  background-color: #3A414B;
+  background-color: #eb9f48;
   color: white;
   padding: 100px 0px;
-  h3 {
-    margin-top: 0px;
-  }
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.drink {
+  height: 100px;
+  width: 100px;
 }
 
 .cocktail-list {
-  margin-top: 50px;
+  margin-top: 0px;
+  background-color: white;
 }
+
