--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,5 +19,9 @@
 .cocktail-list {
   margin-top: 0px;
   background-color: white;
+  h1 {
+    margin-top: 50px;
+    font-color: #30332E;
+  }
 }
 
