--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,4 +3,8 @@
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo.png", height: 50 %>
   <% end %>
+
+  <div class="navbar-wagon-right">
+    <%= link_to "Add a new cocktail", new_cocktail_path, class: "navbar-wagon-right navbar-wagon-link btn btn-info" %>
+  </div>
 </div>
